--- a/src/layouts/Auth/index.less
+++ b/src/layouts/Auth/index.less
@@ -1,83 +1,62 @@
 .container {
   position: relative;
   display: flex;
-  flex-flow: row;
+  align-items: center;
+  justify-content: flex-end;
   height: 100vh;
   overflow: hidden;
-  background-color: #fff;
+  padding-right: 80px;
 
-  .left {
+  .background-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 2;
+  }
+
+  .login-form {
     position: relative;
-    width: 576px;
-    overflow-y: auto;
-
-    /* TODO wait for RGB
-    // background: rgb(253, 249, 252) no-repeat fixed left bottom;
-    // background-size: 556px; */
+    z-index: 3;
+    width: 480px;
+    padding: 40px;
+    background: rgba(255, 255, 255, 0.95);
+    backdrop-filter: blur(10px);
+    border-radius: 16px;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.2);
 
     .lang {
       position: absolute;
       top: 20px;
-      right: 24px;
+      right: 20px;
       width: 20px;
       height: 20px;
       text-align: right;
+      z-index: 4;
     }
 
-    .main {
-      margin-top: 10vh;
-      padding: 0 130px;
+    .top {
+      text-align: center;
+      margin-bottom: 30px;
 
-      .top {
+      .header {
+        height: 56px;
+        line-height: 56px;
         text-align: center;
 
-        .header {
+        a {
+          text-decoration: none;
+        }
+
+        .logo {
           height: 56px;
-          line-height: 56px;
-          text-align: left;
-
-          a {
-            text-decoration: none;
-          }
-
-          .logo {
-            //width: 87px;
-            height: 56px;
-            margin-right: 16px;
-            vertical-align: top;
-          }
+          margin-right: 16px;
+          vertical-align: top;
         }
       }
     }
   }
-
-  .right {
-    position: relative;
-    flex: 1 1;
-    text-align: center;
-    background-color: #21242a;
-  }
-}
-
-.login-image {
-  margin-top: calc(100vh - 668px);
-}
-
-.login-full-image {
-  width: 100%;
-  height: 100%;
-}
-
-.full-image-front {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(14, 34, 181, 15%);
-}
-
-.login-right-logo {
-  position: relative;
-  top: -100px;
 }
