--- a/src/pages/auth/containers/Login/index.less
+++ b/src/pages/auth/containers/Login/index.less
@@ -7,10 +7,19 @@
 .welcome {
   margin-top: 24px;
   margin-bottom: 24px;
+  text-align: center;
+  color: #333;
+  font-size: 28px;
+  font-weight: 500;
 }
 
 .login-form {
-  width: 310px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background: none;
+  border-radius: 0;
+  box-shadow: none;
 }
 
 .login-error {
